--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -1,16 +1,16 @@
 <main class="main">
   <div class="inner">
-    <% if user_signed_in? %>
+    <% if user_signed_in?%>
       <div class="greeting">
         こんにちは、
-        <%= link_to "#{current_user.name}さん", user_path(current_user), class: :greeting__link%>
+          <%= link_to "#{current_user.name}さん", "/users/#{current_user.id}", class: :greeting__link %>
       </div>
       <%else%>
     <% end %>
     <div class="card__wrapper">
-    <% @prototypes.each do |prototype|  %>
-      <%= render partial: "prototype" , locals: { prototype: prototype } %>
-    <% end %>
+    <% @prototypes.each do |prototype| %>
+    <%= render partial: "prototype", locals: { prototype: prototype } %>
+      <% end %>
     </div>
   </div>
 </main>
